# NT219_Project_Interbank-Blockchain-PQC-ZKP

./: .gitignore  README.md
Besu-hyperledger/: docker-compose.yml
Besu-hyperledger/scripts/: test_tls.sh
Besu-hyperledger/smart_contracts/: package-lock.json
GUI/web/: BROWSER_TLS_FIX.md  PQC_CONFIGURATION.md  package-lock.json  package.json
PQC/: HUONG_DAN_NHANH.md  README.md  TONG_KET.md  pom.xml
contract/: hardhat.config.ts  package-lock.json  package.json
docs/: INDEX.md  README.md  RUNBOOK.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_INDEX.md  IMPLEMENTATION_STRATEGY.md  PQC_KSM_INTEGRATION_ANALYSIS.md  ROUTING_ANALYSIS.md  SMART_CONTRACT_EXPLANATION.md
docs/debugging/: BALANCE_STORAGE_FIX.md  BLOCKCHAIN_CONNECTION_FIX.md  BUGFIXES_SUMMARY.md  DEBUGGING_INDEX.md  NETWORKERROR_FIX.md  TRANSACTION_FIX_SUMMARY.md
docs/deployment/: BLOCKCHAIN_SETUP.md  DEPLOYMENT_INDEX.md  PKI_INTEGRATION_GUIDE.md  QUY_TRINH_TRIEN_KHAI_PQC.md  RESET_BLOCKCHAIN_GUIDE.md  TLS13_SETUP_GUIDE.md  ZKP_WINTERFELL_DEPLOYMENT.md
docs/guides/: GUIDES_INDEX.md  HOW_TO_TOGGLE_MOCK_MODE.md  PQC_KSM_QUICK_START.md  QUICK_GUIDE_MOCK_MODE.md  QUICK_RESET_GUIDE.md  RUNBOOK.md  RUNBOOK_TLS_CHEAT_SHEET.md  SYNC_TRANSACTIONS_GUIDE.md
ethereum-benchmark/: QUICK_START_BENCHMARK.md  README_BENCHMARK.md  RUN_BENCHMARK.sh  disable-pki-for-benchmark.sh  docker-compose.interbank.yml  fund-accounts.sh  prepare-benchmark.sh  redeploy-contract.sh  run-all-benchmarks.sh  test-batch-tps.sh
prover/: Cargo.toml
prover/src/api/: mod.rs
prover/src/balance_proof/: mod.rs
(+95 files in other folders)
